--- a/mypage.htm
+++ b/mypage.htm
@@ -28,7 +28,7 @@
                         <img src="_imgs/high/logo.png" alt="啄米" />
                     </a>
                 </h1>
-                <div id="" class="col-l ml-5">
+                <div id="core" class="col-l ml-5">
                     <p class="yel txt-m">Beta</p>
                     <p class="whi txt-m mt-1">收集，分类和交流你的日常数据</p>
                 </div>
