--- a/mypage.htm
+++ b/mypage.htm
@@ -28,7 +28,7 @@
                         <img src="_imgs/high/logo.png" alt="啄米" />
                     </a>
                 </h1>
-                <div id="core" class="col-l ml-5">
+                <div id="" class="col-l ml-5">
                     <p class="yel txt-m">Beta</p>
                     <p class="whi txt-m mt-1">收集，分类和交流你的日常数据</p>
                 </div>
@@ -95,28 +95,28 @@
                     </form>
                 </div>
                 <div>
-                    <div class="pg-title-feeds pos-rel">
-                        <ul id="plantype" class="col-r hor pos-abs ndr">
-                            <li class="active pf-all">
+                    <div class="pg-title">
+                        <ul class="col-r hor">
+                            <li>
                                 <a href="#this">全部</a>
                             </li>
-                            <li class="pf-one">
+                            <li>
                                 <a href="#this">1小时</a>
                             </li>
-                            <li class="pf-ten">
+                            <li>
                                 <a href="#this">10小时</a>
                             </li>
-                            <li class="pf-hdrd">
+                            <li>
                                 <a href="#this">100小时</a>
                             </li>
                         </ul>
-                        <h2 class="txt-xxl bold azure">
+                        <h2 class="txt-4xl azure">
                             谁在用啄米
                         </h2>
                     </div>
                     <div id="filterbox" class="cf mt-5">
-                        <ul class="fb-list hor azure col-l txt-m mt-3">
-                            <li class="first">
+                        <ul class="fb-list hor azure col-l">
+                            <li>
                                 <a href="#this">图片</a>
                             </li>
                             <li>
@@ -130,8 +130,8 @@
                             </li>
                         </ul>
                         <div class="pos-rel col-r">
-                            <input id="fb-search" type="text" class="mgry" />
-                            <a href="#this" class="pos-abs btn-fb-clear txtindent">Clear</a>
+                            <input type="text" />
+                            <a href="#this" class="pos-abs btn-fb-clear">Clear</a>
                         </div>
                     </div>
                     <div id="feedsbox">
@@ -141,24 +141,24 @@
                             </a>
                             <div class="fb-r-container col-l">
                                 <div class="fb-r-content cf">
-                                    <div class="cf">
+                                    <div>
                                         <p class="col-l">
-                                            <a href="#this" class="azure ndr">SHU</a>
+                                            <a href="#this" class="azure">SHU</a>
                                             <span class="fb-r-state">10分钟前更新了<span class="fb-r-plan">1小时</span>状态:</span>
                                             <span class="fb-r-title">今天又跑了30分钟</span>
                                         </p>
                                         <p class="col-r">
-                                            <span class="fb-r-date">2011.06.12 04:40 PM</span>
+                                            <span>2011.06.12 04:40 PM</span>
                                         </p>
                                     </div>
-                                    <div class="clear mt-8">
+                                    <div class="clear">
                                         <a class="col-r">
                                             <img src="_imgs/photos/pic_001.gif" />
                                         </a>
-                                        <p class="bla fb-r-text">他出身于书香门第，父亲是大学教授。他为爱妻，20年来从不上CCAV；他是个好爸爸；他顾家，厌恶应酬，滴酒不沾；他才华横溢，琴棋书画样样精通，学生时是体育全能，探戈高手；他饱读诗书，季羡林赞他可胜任北大的研究生导师，曾与钱钟书是忘年之交，他说他只是个戏子。他就是陈道明。一个很给力的男人。</p>
+                                        <p class="bla">他出身于书香门第，父亲是大学教授。他为爱妻，20年来从不上CCAV；他是个好爸爸；他顾家，厌恶应酬，滴酒不沾；他才华横溢，琴棋书画样样精通，学生时是体育全能，探戈高手；他饱读诗书，季羡林赞他可胜任北大的研究生导师，曾与钱钟书是忘年之交，他说他只是个戏子。他就是陈道明。一个很给力的男人。</p>
                                     </div>
-                                    <ul class="fb-r-action mt-8 clear col-r hor ndr">
-                                        <li class="first">
+                                    <ul class="clear col-r hor">
+                                        <li>
                                             <a href="#this">留言</a>
                                         </li>
                                         <li>
@@ -168,27 +168,27 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="fb-record cf last">
+                        <div class="fb-record cf">
                             <a href="#this" class="col-l">
                                 <img src="_imgs/photos/m.png" />
                             </a>
                             <div class="fb-r-container col-l">
                                 <div class="fb-r-content cf">
-                                    <div class="cf">
+                                    <div>
                                         <p class="col-l">
-                                            <a href="#this" class="fb-r-me txt-3xl ndr">我</a>
+                                            <a href="#this">我</a>
                                             <span class="fb-r-state">10分钟前更新了<span class="fb-r-plan">10小时</span>状态:</span>
                                             <span class="fb-r-title">今天又跑了30分钟</span>
                                         </p>
                                         <p class="col-r">
-                                            <span class="fb-r-date">2011.06.12 04:40 PM</span>
+                                            <span>2011.06.12 04:40 PM</span>
                                         </p>
                                     </div>
-                                    <div class="clear mt-8">
-                                        <p class="bla fb-r-text">他出身于书香门第，父亲是大学教授。他为爱妻，20年来从不上CCAV；他是个好爸爸；他顾家，厌恶应酬，滴酒不沾。</p>
+                                    <div class="clear">
+                                        <p class="bla">他出身于书香门第，父亲是大学教授。他为爱妻，20年来从不上CCAV；他是个好爸爸；他顾家，厌恶应酬，滴酒不沾。</p>
                                     </div>
-                                    <ul class="fb-r-action mt-8 clear col-r hor ndr">
-                                        <li class="first">
+                                    <ul class="clear col-r hor">
+                                        <li>
                                             <a href="#this">留言</a>
                                         </li>
                                         <li>
@@ -218,18 +218,18 @@
                         </p>
                         <p class="pb-loc">上海</p>
                         <p class="pb-age">80后 牡羊座</p>
-                        <ul id="activitystatisticbox" class="hor txtalign-c">
-                            <li class="first">
+                        <ul id="activitystatisticbox" class="hor">
+                            <li>
                                 <p class="bla txt-7xl">3</p>
-                                <span class="bla txt-m">活动</span>
+                                <span class="bla">活动</span>
                             </li>
                             <li>
                                 <p class="bla txt-7xl">0</p>
-                                <span class="bla txt-m">达成</span>
+                                <span class="bla">达成</span>
                             </li>
                             <li>
                                 <p class="bla txt-7xl">0</p>
-                                <span class="bla txt-m">放弃</span>
+                                <span class="bla">放弃</span>
                             </li>
                         </ul>
                     </div>
