add autofocus (html5 support)

--- a/login.htm
+++ b/login.htm
@@ -25,16 +25,16 @@
                 <p class="whi txt-4xl mt-3">收集，分类和交流你的日常数据</p>
             </div>
         </div>
-        <form action="" id="form-login" class="clear">
+        <form action="reg.htm" id="form-login" class="clear">
             <fieldset class="formbox">
                 <legend class="hidden">登录</legend>
                 <div class="">
                     <p class="col-l pos-rel">
-                        <label class="txt-3xl gry pos-abs fl-label" for="">电子邮件</label>
+	                    <label id="input-mail-hint" class="txt-3xl gry pos-abs fl-label" for="input-mail">电子邮件</label>
                         <input type="text" id="input-mail" class="txt-3xl gry fl-input outerglow" />
                     </p>
                     <p class="col-l pos-rel ml-8">
-                        <label class="txt-3xl gry pos-abs fl-label" for="">登录密码</label>
+	                    <label id="input-password-hint" class="txt-3xl gry pos-abs fl-label" for="input-password">登录密码</label>
                         <input type="text" id="input-password" class="txt-3xl gry fl-input outerglow" />
                     </p>
                     <input type="submit" id="btn-login" class="fl-button whi txt-3xl ml-10 col-r" value="登录" />
@@ -71,7 +71,7 @@
     <!-- Data Interactive -->
     
     <!-- Page -->
-    <script type="text/javascript" src="_scripts/page/plan.js"></script>
+    <script type="text/javascript" src="_scripts/page/login.js"></script>
 
 </body>
 </html>
