--- a/reg.htm
+++ b/reg.htm
@@ -52,7 +52,7 @@
                                 <label for="fb-mail">电子邮件：</label>
                             </p>
                             <p class="mt-5 pos-rel">
-                                <input type="text" id="fb-mail" class="fb-input outerglow" />
+                                <input type="text" id="fb-mail" class="fb-input outerglow" autofocus />
                                 <span class="pos-abs fb-tip whi hidden">
                                     <sup class="pos-abs icon-formerr"></sup>
                                     <span class="fb-tip-msg"></span>
@@ -88,7 +88,7 @@
                         </div>
                         <p class="mt-15">
                             <input type="checkbox" id="fb-chk-protocal" class="fb-chkbox" />
-                            <label for="fb-chk-protocal">我已于都并接受《<a href="#this" class="azure">使用协议</a>》</label>
+                            <label for="fb-chk-protocal">我已于都并接受《<a href="plan.htm" class="azure">使用协议</a>》</label>
                         </p>
                         <p class="mt-18">
                             <a id="fb-createuser" href="plan.htm" class="btn-yes btn-disable">
