--- a/index.htm
+++ b/index.htm
@@ -7,7 +7,7 @@
 <body>
 
 <script type="text/javascript">
-    window.location = "plan.htm";
+    window.location = "login.htm";
 </script>
 
 </body>
