--- a/plan.htm
+++ b/plan.htm
@@ -85,7 +85,7 @@
                     </div>
                     <p class="txt-4xl bla mt-20">真的准备好了？</p>
                     <p class="mt-18">
-                        <a href="#this" class="btn-yes outerglow">
+                        <a href="mypage.htm" class="btn-yes outerglow">
                             立刻行动
                             <span class="icon-go"></span>
                         </a>
